--- a/app/src/main/res/layout/add_address_actv_fragment.xml
+++ b/app/src/main/res/layout/add_address_actv_fragment.xml
@@ -14,6 +14,14 @@
 		android:layout_centerHorizontal="true"
 	/>
 
+	<TextView android:id="@+id/autoCompleteAnchor"
+		android:layout_below="@id/strut"
+		android:layout_centerHorizontal="true"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:visibility="invisible"
+	/>
+
 	<TextView
 		android:id="@+id/firstNameLabel"
 		android:ems="10"
@@ -112,7 +120,7 @@
 		android:layout_marginTop="8dp"
 		android:layout_width="wrap_content"
 		android:paddingLeft="4dp"
-		android:text="@string/shipto_address_label"
+		android:text="@string/address_label"
 		android:textColor="@color/text_blue"
 		android:visibility="invisible"
 	/>
@@ -131,7 +139,8 @@
 		<AutoCompleteTextView
 			android:id="@+id/addressACTV"
 			android:ems="10"
-			android:hint="@string/shipto_address_label"
+			android:hint="@string/address_label"
+			android:dropDownAnchor="@+id/autoCompleteAnchor"
 			android:inputType="textPostalAddress"
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
@@ -140,7 +149,7 @@
 		<EditText
 			android:id="@+id/addressET"
 			android:ems="10"
-			android:hint="@string/shipto_address_label"
+			android:hint="@string/address_label"
 			android:inputType="textPostalAddress"
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
@@ -149,7 +158,7 @@
 	</LinearLayout>
 
 	<TextView
-		android:id="@+id/appartmentLabel"
+		android:id="@+id/apartmentLabel"
 		android:layout_below="@id/addressLayout"
 		android:ems="10"
 		android:layout_alignParentLeft="true"
@@ -158,16 +167,16 @@
 		android:layout_marginTop="8dp"
 		android:layout_width="wrap_content"
 		android:paddingLeft="4dp"
-		android:text="@string/appartment_label"
+		android:text="@string/apartment_label"
 		android:textColor="@color/text_blue"
 		android:visibility="invisible"
 	/>
 
     <EditText
-		android:id="@+id/appartment"
-		android:layout_below="@id/appartmentLabel"
+		android:id="@+id/apartment"
+		android:layout_below="@id/apartmentLabel"
         android:ems="10"
-		android:hint="@string/appartment_label"
+		android:hint="@string/apartment_label"
         android:inputType="textPostalAddress"
 		android:layout_alignEnd="@+id/lastName"
         android:layout_alignParentLeft="true"
@@ -180,7 +189,7 @@
 
 	<TextView
 		android:id="@+id/cityLabel"
-		android:layout_below="@id/appartment"
+		android:layout_below="@id/apartment"
 		android:ems="10"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
