--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bundle_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fixed_grid_wide_height"
     android:paddingLeft="16dp"
