* adding cidUsed field to CreditCard.Type enumeration so that client code doesn't have to compare name with "Staples" * changing imeOptions to actionDone for CC expiration date for sake of profile page. Guest checkout dynamically updates it to actionNext when there's a CID (non-Staples card).

--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -28,6 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <!--DLS: setting imeOptions to actionDone by default for use in profile, guest checkout will
+            modify this to actionNext programatically when CID is displayed -->
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +38,7 @@
             android:maxLength="5"
             android:hint="MM/YY"
             android:visibility="gone"
-            android:imeOptions="actionNext"/>
+            android:imeOptions="actionDone"/>
         <EditText
             android:id="@+id/cid"
             android:layout_width="wrap_content"
