--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -4,6 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="#cccccc">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        style="@style/DrawerStyle"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
