--- a/app/src/main/res/layout/drawer_fragment.xml
+++ b/app/src/main/res/layout/drawer_fragment.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="48dp"
     android:orientation="horizontal"
     style="@style/DrawerStyle">
     <ImageView
         android:id="@+id/icon"
+        style="@style/DrawerStyle"
         android:layout_width="wrap_content"
-        style="@style/DrawerStyle"/>
+        android:layout_marginLeft="12dp"/>
     <TextView
         android:id="@+id/title"
+        style="@style/DrawerStyle"
         android:layout_width="0dp"
         android:layout_weight="1"
-        style="@style/DrawerStyle"/>
+        android:layout_marginLeft="28dp"/>
 </LinearLayout>
