--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -37,15 +37,30 @@
                     android:layout_weight="1"/>
             </LinearLayout>
             <!-- Left drawer (menu) -->
-            <ListView
+            <LinearLayout
                 android:id="@+id/left_drawer"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_gravity="start"
-                android:divider="@null"
-                android:background="#ffffff"
-                android:choiceMode="singleChoice"/>
+                android:layout_gravity="start">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:background="@color/staples_light"
+                    android:paddingRight="44dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:src="@drawable/ic_staples"/>
+                <ListView
+                    android:id="@+id/left_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:divider="@null"
+                    android:background="#ffffff"
+                    android:choiceMode="singleChoice"/>
+            </LinearLayout>
         </android.support.v4.widget.DrawerLayout>
     </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
 
