--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-                <!-- The ActionBar gets inserted here -->
+                <include layout="@layout/action_bar"/>
                 <FrameLayout
                     android:id="@+id/content"
                     android:layout_width="match_parent"
