--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,6 +59,21 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="InputField">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:gravity">start|bottom</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#333333</item>
+        <item name="textDualSize">12sp</item>
+        <item name="textDualGap">1dp</item>
+        <item name="textDualColor">#ff0000ff</item>
+    </style>
+
     <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff00</item>
     </style>
