replacing some hard-coded strings in LoginFragment disabling profile menu item when not logged in

--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -42,7 +42,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="@string/login_title"
         android:textColor="@color/text_white"
         android:id="@+id/submit_button"
         android:layout_marginTop="50dp"
