--- a/app/src/main/res/layout/address_block.xml
+++ b/app/src/main/res/layout/address_block.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.staples.mobile.cfa.widget.AddressBlock xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
     android:orientation="vertical"
 	android:layout_marginLeft="@dimen/left_margin"
 	android:layout_marginRight="@dimen/right_margin">
