centralizing currency format adding method to calculate rewards total adding rewards total to drawer menu updating configurator fragment to use centralized rewards calculation

--- a/app/src/main/res/layout/drawer_fragment.xml
+++ b/app/src/main/res/layout/drawer_fragment.xml
@@ -15,4 +15,10 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_marginLeft="28dp"/>
+    <TextView
+        android:id="@+id/additional_text"
+        style="@style/DrawerStyle"
+        android:layout_width="wrap_content"
+        android:layout_marginRight="16dp"
+        android:visibility="gone"/>
 </LinearLayout>
