--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -12,7 +12,7 @@
     <color name="background_blue">#3f6fff</color>
     <color name="hr_extra_light_gray">#f5f5f5</color>
     <color name="text_blue">#036ae0</color>
-    <color name="text_red">#ff0000</color>
+    <color name="text_red">#cc0000</color>
     <color name="text_green">#6fab04</color>
     <color name="text_black">#000000</color>
     <color name="text_nearly_black">#333333</color>
