--- a/app/src/main/res/layout/weekly_ad_by_categories_item.xml
+++ b/app/src/main/res/layout/weekly_ad_by_categories_item.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_white">
-    <ImageView
-        android:id="@+id/weekly_ad_category_image"
-        android:layout_width="@dimen/weekly_ad_category_item_image_width"
-        android:layout_height="@dimen/weekly_ad_category_item_image_height"
-        android:layout_weight="1"
+    card_view:cardCornerRadius="4dp"
+    android:layout_margin="5dp">
 
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="12dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_white"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/weekly_ad_category_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:paddingLeft="15dip"
+                android:paddingTop="10dip"
+                android:textColor="@color/text_black"/>
+            <TextView
+                android:id="@+id/weekly_ad_category_deals_count_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:paddingTop="10dp"
+                android:paddingLeft="15dip"
+                android:textColor="@color/text_red"/>
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/weekly_ad_category_title_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:lines="2"
-        android:ellipsize="end"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:paddingLeft="15dip"
-        android:paddingTop="10dip"
-        android:textColor="@color/text_nearly_black"/>
-    <TextView
-        android:id="@+id/weekly_ad_category_deals_count_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:lines="2"
-        android:ellipsize="end"
-        android:textSize="18sp"
-        android:paddingLeft="15dip"
-        android:paddingTop="15dip"
-        android:textColor="@color/text_red"/>
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/weekly_ad_category_image"
+            android:layout_width="@dimen/weekly_ad_category_item_image_width"
+            android:layout_height="@dimen/weekly_ad_list_item_image_height"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingRight="15dp"/>
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
