--- a/app/src/main/res/layout/weekly_ad_by_category.xml
+++ b/app/src/main/res/layout/weekly_ad_by_category.xml
@@ -1,12 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!--android:background="@color/background_white">-->
-
-    <ListView
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <ImageView
+    android:id="@+id/weeklyad_image"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:src="@drawable/weekly_ad"/>
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/weekly_ad_categories_list"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent"/>
+    <!--<ListView-->
+        <!--android:id="@+id/weekly_ad_categories_list"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_width="match_parent">-->
+    <!--</ListView>-->
 
-</FrameLayout>
+</LinearLayout>
