--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/orderListView" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +15,5 @@
         android:layout_marginTop="24dp"
         android:visibility="gone"
         android:textSize="20dip"
-        android:textColor="@android:color/darker_gray"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        android:textColor="@android:color/darker_gray"/>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
