--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -5,7 +5,7 @@
   -->
 
 <com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:other="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -22,9 +22,9 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            card_view:contentPadding="6dp"
-            card_view:cardCornerRadius="8dp"
-            card_view:cardElevation="4dp"
+            other:contentPadding="6dp"
+            other:cardCornerRadius="8dp"
+            other:cardElevation="4dp"
             >
 
             <RelativeLayout
@@ -52,19 +52,23 @@
                     android:layout_centerHorizontal="true"
                     android:layout_below="@id/member_duration"
                     android:textSize="18sp"/>
-                <TextView
-                    android:id="@+id/rewards_number_barcode"
+
+                <com.staples.mobile.cfa.widget.Numeric39Barcode
+                    android:id="@+id/rewards_number_barcode39"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:padding="8dp"
                     android:layout_below="@id/rewards_number_label"
-                    android:textSize="36sp"/>
+                    other:barcodeHeight="36dp"
+                    other:barcodeColor="@color/text_nearly_black"
+                    />
                 <TextView
                     android:id="@+id/rewards_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@id/rewards_number_barcode"
+                    android:layout_below="@id/rewards_number_barcode39"
                     android:textSize="20sp"/>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
