--- a/app/src/main/res/layout/weekly_ad_by_category.xml
+++ b/app/src/main/res/layout/weekly_ad_by_category.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -19,4 +19,4 @@
         <!--android:layout_width="match_parent">-->
     <!--</ListView>-->
 
-</LinearLayout>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
