--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:src">@drawable/ic_shopping_cart_white</item>
+        <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarButtonStyle" parent="android:Widget.Button">
         <item name="android:layout_width">wrap_content</item>
@@ -18,11 +19,13 @@
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarIconStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">6dp</item>
+        <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarSearchStyle">
         <item name="android:layout_width">wrap_content</item>
@@ -30,6 +33,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginRight">4dp</item>
+        <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarTextStyle" parent="android:Widget.TextView">
         <item name="android:layout_width">wrap_content</item>
@@ -40,6 +44,7 @@
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">#ffffff</item>
+        <item name="android:visibility">gone</item>
     </style>
 
     <style name="DrawerStyle">
