--- a/app/src/main/res/layout/weekly_ad_by_category.xml
+++ b/app/src/main/res/layout/weekly_ad_by_category.xml
@@ -5,8 +5,7 @@
     <ImageView
     android:id="@+id/weeklyad_image"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:src="@drawable/weekly_ad"/>
+    android:layout_height="100dp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/weekly_ad_categories_list"
         android:layout_height="0dp"
