--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/weekly_ad_list_cardview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_white">
-    <ImageView
-        android:id="@+id/weekly_ad_list_item_image"
-        android:layout_width="@dimen/weekly_ad_list_item_image_width"
-        android:layout_height="@dimen/weekly_ad_list_item_image_height"
-
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"/>
-
-    <TextView
-        android:id="@+id/weekly_ad_list_item_title_text"
-        android:textColor="@android:color/black"
-        android:maxLines="2"
-
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:ellipsize="end"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/weekly_ad_list_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/weekly_ad_list_item_price_text"
-        android:textColor="@android:color/holo_red_dark"
-
-        android:paddingLeft="20dp"
-        android:paddingBottom="20dp"
-        android:ellipsize="end"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/weekly_ad_list_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-</RelativeLayout>
+    card_view:cardCornerRadius="4dp"
+    android:layout_margin="5dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/weekly_ad_list_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dip"
+            android:paddingTop="10dip"
+            android:paddingRight="10dip"
+            android:paddingLeft="10dip"/>
+        <TextView
+            android:id="@+id/weekly_ad_list_title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textColor="@color/text_black"/>
+        <TextView
+            android:id="@+id/weekly_ad_list_deal_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip"
+            android:textColor="@color/text_red"/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
