--- a/app/src/main/res/layout/notify_prefs_fragment.xml
+++ b/app/src/main/res/layout/notify_prefs_fragment.xml
@@ -27,14 +27,9 @@
         android:layout_height="wrap_content"
         android:text="@string/set_alias"/>
     </LinearLayout>
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-        <LinearLayout
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
-    </ScrollView>
+        android:layout_weight="1"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
