--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -7,35 +7,76 @@
     android:layout_height="match_parent"
     card_view:cardCornerRadius="4dp"
     android:layout_margin="5dp">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/inStoreTV"
+                android:paddingTop="10dp"
+                android:textSize="12dp"
+                android:textColor="@color/text_red"
+                android:gravity="center"
+                android:visibility="gone"
+                android:textStyle="bold"/>
+            <ImageView
+                android:id="@+id/weekly_ad_list_image"
+                android:layout_width="match_parent"
+                android:layout_height="120dip"
+                android:paddingTop="10dip"
+                android:paddingRight="10dip"
+                android:paddingLeft="10dip"
+                android:src="@drawable/weekly_ad"/>
+            <TextView
+                android:id="@+id/weekly_ad_list_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:paddingTop="10dp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textColor="@color/text_black"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/weekly_ad_list_deal_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:paddingLeft="10dip"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/text_red"/>
+                <TextView
+                    android:id="@+id/weeklyad_price_extension"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10dp"
+                    android:paddingLeft="3dip"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/text_gray"
+                    android:visibility="gone"/>
+            </LinearLayout>
+        </LinearLayout>
         <ImageView
-            android:id="@+id/weekly_ad_list_image"
-            android:layout_width="match_parent"
-            android:layout_height="200dip"
-            android:paddingTop="10dip"
-            android:paddingRight="10dip"
-            android:paddingLeft="10dip"/>
-        <TextView
-            android:id="@+id/weekly_ad_list_title_text"
-            android:layout_width="match_parent"
+            android:id="@+id/weeklyad_sku_action"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:paddingLeft="10dip"
-            android:paddingRight="10dip"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textColor="@color/text_black"/>
-        <TextView
-            android:id="@+id/weekly_ad_list_deal_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:paddingLeft="10dip"
-            android:paddingRight="10dip"
-            android:textColor="@color/text_red"/>
-    </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:visibility="gone"/>
+        </RelativeLayout>
+
 </android.support.v7.widget.CardView>
