changes and tweaks

--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -33,7 +33,7 @@
         </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/shipment_item_list"
+        android:id="@+id/sku_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
