--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -3,15 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <ListView
-        android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/orders_list"
         android:layout_height="wrap_content"
-        android:id="@+id/orderListView" />
+        android:layout_width="match_parent"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/orderTV"
+        android:id="@+id/orderErrorTV"
         android:layout_marginTop="24dp"
         android:visibility="gone"
         android:textSize="20dip"
