--- a/app/src/main/res/layout/weekly_ad_category.xml
+++ b/app/src/main/res/layout/weekly_ad_category.xml
@@ -5,17 +5,9 @@
     <ImageView
     android:id="@+id/weeklyad_image"
     android:layout_width="match_parent"
-    android:layout_height="100dp"/>
+    android:layout_height="150dp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/weekly_ad_categories_list"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
-    <!--<ListView-->
-        <!--android:id="@+id/weekly_ad_categories_list"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:layout_width="match_parent">-->
-    <!--</ListView>-->
-
 </com.staples.mobile.cfa.widget.AnimatorLayout>
