--- a/app/src/main/res/layout/weekly_ad_list.xml
+++ b/app/src/main/res/layout/weekly_ad_list.xml
@@ -4,7 +4,6 @@
     android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/weekly_ad_list_items"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
