--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="5dp">
+    android:layout_margin="2dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -31,7 +31,7 @@
                 android:paddingTop="10dip"
                 android:paddingRight="10dip"
                 android:paddingLeft="10dip"
-                android:src="@drawable/weekly_ad"/>
+                android:src="@drawable/weekly_ad_image"/>
             <TextView
                 android:id="@+id/weekly_ad_list_title_text"
                 android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/weekly_ad_list_deal_text"
+                    android:id="@+id/weekly_ad_list_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
