--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -146,14 +146,14 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
                             <ImageView
-                                android:layout_width="20dp"
+                                android:layout_width="match_parent"
                                 android:layout_height="20dp"
                                 android:layout_gravity="center"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/ic_place_black"/>
                             <TextView
                                 android:id="@+id/store_status"
-                                android:layout_width="30dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:textSize="12sp"
