--- a/app/src/main/res/layout/reset_password_fragment.xml
+++ b/app/src/main/res/layout/reset_password_fragment.xml
@@ -12,14 +12,14 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:hint="@string/email"
-        android:id="@+id/editText"
+        android:id="@+id/emailTV"
         android:layout_gravity="center_horizontal" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/password_reset"
-        android:id="@+id/button"
+        android:id="@+id/resetPasswordBtn"
         android:layout_marginTop="20dp"
         android:textColor="@color/text_white"/>
 
