--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -14,5 +14,6 @@
         android:layout_marginTop="24dp"
         android:visibility="gone"
         android:textSize="20dip"
+        android:text="@string/no_orders_found"
         android:textColor="@android:color/darker_gray"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
