--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -3,17 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/orders_list"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/orderErrorTV"
-        android:layout_marginTop="24dp"
-        android:visibility="gone"
-        android:textSize="20dip"
-        android:text="@string/no_orders_found"
-        android:textColor="@android:color/darker_gray"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/orders_list"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/orderErrorTV"
+            android:layout_marginTop="24dp"
+            android:visibility="gone"
+            android:textSize="20dip"
+            android:text="@string/no_orders_found"
+            android:textColor="@android:color/darker_gray"/>
+
+        <!--tracking shipment bottom sheet-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            >
+
+            <!--todo-->
+
+        </LinearLayout>
+
+    </FrameLayout>
+
 </com.staples.mobile.cfa.widget.AnimatorLayout>
